fixed text overflow in message

--- a/static/styles.css
+++ b/static/styles.css
@@ -14,6 +14,7 @@ body{
 
 .messages{
     overflow-y:scroll;
+    overflow-x:hidden;
     height:30vw;
     border-style:solid;
     border-color: #102E4A;
@@ -25,12 +26,14 @@ body{
 .receivedBox{
     display:flex;
     justify-content:flex-start;
-   
+    /*max-width:80%;*/
 }
 
 .sentBox{
     display:flex;
     justify-content:flex-end;
+    /*max-width:80%;*/
+
 }
 
 .sentMessage{
@@ -45,6 +48,8 @@ body{
     padding-right:1%;
     background-color:#102E4A;
     border-color: #102E4A;
+    max-width:80%;
+
 }
 
 .receivedMessage{
@@ -59,18 +64,26 @@ body{
     padding-right:1%;
     background-color:#102E4A;
     border-color: #102E4A;
+    overflow-wrap:break-word;
+    max-width:80%;
+
 }
 
 .receivedMessageName{
     font-size: .8vw;
     color:#CC3F0C;
     font-weight:bold;
+    margin-bottom:.5vw;
+    margin-top:.1vw;
 }
+
 
 .sentMessageName{
     font-size:.8vw;
     color:#CC3F0C;
     font-weight:bold;
+    margin-bottom:.5vw;
+    margin-top:.1vw;
 }
 
 .send{
@@ -97,6 +110,7 @@ body{
     width:50%;
     height:50%;
     margin-right:1vw;
+    overflow-wrap:break-word;
 }
 
 .sendButton{
